--- a/index.css
+++ b/index.css
@@ -92,3 +92,14 @@ img {
     transform: rotate(360deg);
   }
 }
+
+.my-masonry-grid {
+  display: flex;
+  margin-left: -16px;
+}
+.my-masonry-grid_column {
+  padding-left: 16px;
+}
+.my-masonry-grid_column > div {
+  margin-bottom: 16px;
+}
