--- a/index.css
+++ b/index.css
@@ -93,13 +93,8 @@ img {
   }
 }
 
-.my-masonry-grid {
-  display: flex;
-  margin-left: -16px;
-}
-.my-masonry-grid_column {
-  padding-left: 16px;
-}
-.my-masonry-grid_column > div {
-  margin-bottom: 16px;
+.controls-web-kit {
+  flex: 1;
+  cursor: pointer;
+  -webkit-app-region: drag;
 }
